--- a/JS/ProgrammingFundamentals/Arrays/index.html
+++ b/JS/ProgrammingFundamentals/Arrays/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./reverseString.js"></script>
+    <script src="./gladiatorInventory.js"></script>
 </body>
 
 </html>
